# text-to-speech

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  female.py  pyproject.toml
.github/workflows/: ci.yml  docs-check.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes_tts.py
app/models/: __init__.py  tts_models.py
app/services/: __init__.py  audio_merge.py  job_store.py  tts_service.py
app/templates/: index.html
app/utils/: __init__.py  file_utils.py  text_utils.py
docs/: api-contract.md  architecture.md  dialogue-speaker-fallback-plan.md  fastapi-migration-checklist.md  natural-mode-plan.md  public-repo-cicd-checklist.md  ui-brand-restyle-plan.md
flaskapp/: tts_flask.py  tts_flask2.py
infra/ansible/: README.md  inventory.ini.example  playbook.yml
infra/ansible/group_vars/: all.yml
infra/ansible/templates/: tts-deploy.env.j2  tts-deploy.service.j2  tts-deploy.timer.j2
scripts/: build_local_image.sh  deploy_local.sh  female2.py  malefemale.py  malefemale2.py
tests/: test_api.py  test_text_utils.py
