[project]
name = "japanese-text-to-speech"
version = "0.1.0"
description = "Japanese text-to-speech app with FastAPI and Flask compatibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.116.0",
    "flask>=3.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["flaskapp", "scripts", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["^flaskapp/"]
