[project]
name = "japanese-text-to-speech"
version = "0.1.0"
description = "Multilingual text-to-speech app with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["scripts", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "docs*", "images*"]
